--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ""
-  per_page: 10
+  per_page: 2
   order_by: -date
 
 # Category & Tag
@@ -110,3 +110,7 @@ search:
   field: post
   format: html
   limit: 1000
+
+# Plug Config
+butterfly_article_double_row:
+  enable: true
