--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -234,7 +234,7 @@ aside:
       link: https://github.com/xxxxxx
   card_announcement:
     enable: true
-    content: This is my Blog
+    content: 一位混迹职场多年，期待有所突破的底层码农。本博客旨在分享工作中的避坑经验和一些有趣的内容。
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
